Add vscode ignores
Signed-off-by: synp71 <yoav.nir@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,9 @@ specs/src/.cproject
 specs/src/.project
 specs/src/.settings/
 
+# also vscode
+specs/src/.vscode/
+
 # Generated Makefile
 specs/src/Makefile
 
