--- a/specs/src/Makefile.cached_depends_vs
+++ b/specs/src/Makefile.cached_depends_vs
@@ -28,6 +28,8 @@ processing/Writer.obj: processing/Writer.cc utils/ErrorReporting.h \
 processing/conversions.obj: processing/conversions.cc utils/platform.h \
   utils/ErrorReporting.h processing/conversions.h utils/SpecString.h \
   utils/TimeUtils.h
+processing/persistent.obj: processing/persistent.cc utils/ErrorReporting.h \
+  processing/Config.h processing/persistent.h
 specitems/InputPart.obj: specitems/InputPart.cc utils/platform.h \
   processing/Config.h utils/TimeUtils.h utils/SpecString.h \
   utils/ErrorReporting.h specitems/item.h cli/tokens.h \
@@ -49,8 +51,9 @@ specitems/specItems.obj: specitems/specItems.cc utils/platform.h \
   utils/aluFunctions.h processing/Reader.h
 test/ALUUnitTest.obj: test/ALUUnitTest.cc utils/platform.h \
   utils/ErrorReporting.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
-  utils/TimeUtils.h utils/SpecString.h processing/ProcessingState.h \
-  processing/Writer.h utils/StringQueue.h utils/aluFunctions.h
+  utils/aluRegex.h utils/TimeUtils.h utils/SpecString.h \
+  processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
+  utils/aluFunctions.h processing/persistent.h
 test/ProcessingTest.obj: test/ProcessingTest.cc utils/platform.h \
   cli/tokens.h utils/ErrorReporting.h specitems/specItems.h \
   specitems/item.h processing/conversions.h processing/StringBuilder.h \
@@ -73,15 +76,102 @@ test/readWriteTest.obj: test/readWriteTest.cc utils/ErrorReporting.h \
   processing/StringBuilder.h processing/ProcessingState.h utils/alu.h \
   utils/PythonIntf.h utils/aluValue.h utils/aluFunctions.h
 test/specs.obj: test/specs.cc utils/platform.h cli/tokens.h \
-  utils/ErrorReporting.h processing/Config.h specitems/specItems.h \
-  specitems/item.h processing/conversions.h processing/StringBuilder.h \
-  utils/SpecString.h processing/ProcessingState.h processing/Writer.h \
-  utils/StringQueue.h utils/TimeUtils.h utils/alu.h utils/PythonIntf.h \
-  utils/aluValue.h utils/aluFunctions.h processing/Reader.h \
-  utils/aluRegex.h
+  utils/ErrorReporting.h processing/Config.h processing/persistent.h \
+  specitems/specItems.h specitems/item.h processing/conversions.h \
+  processing/StringBuilder.h utils/SpecString.h \
+  processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
+  utils/TimeUtils.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
+  utils/aluFunctions.h processing/Reader.h utils/aluRegex.h
 test/timeTest.obj: test/timeTest.cc utils/TimeUtils.h utils/SpecString.h
 utils/ErrorReporting.obj: utils/ErrorReporting.cc utils/ErrorReporting.h
 utils/PythonIntf.obj: utils/PythonIntf.cc \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/Python.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/patchlevel.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pyconfig.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pymacconfig.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pyport.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pymacro.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pymath.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pytime.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/object.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pymem.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/pymem.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/object.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/objimpl.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/objimpl.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/typeslots.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pyhash.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pydebug.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/bytearrayobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/bytesobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/unicodeobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/unicodeobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/longobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/longintrepr.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/boolobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/floatobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/complexobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/rangeobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/memoryobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/tupleobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/tupleobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/listobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/dictobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/dictobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/odictobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/enumobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/setobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/methodobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/moduleobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/funcobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/classobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/fileobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/fileobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pycapsule.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/traceback.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/traceback.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/sliceobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cellobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/iterobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/genobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pystate.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pythread.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/pystate.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/initconfig.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/descrobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/warnings.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/weakrefobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/structseq.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/namespaceobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/picklebufobject.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/codecs.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pyerrors.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/pyerrors.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/context.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pyarena.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/modsupport.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/compile.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/code.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pythonrun.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pylifecycle.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/pylifecycle.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/ceval.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/sysmodule.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/sysmodule.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/osmodule.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/intrcheck.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/import.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/abstract.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/cpython/abstract.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/bltinmodule.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/eval.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pyctype.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pystrtod.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pystrcmp.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/dtoa.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/fileutils.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/pyfpe.h \
+  /Users/synp/.pyenv/versions/3.8.3/include/python3.8/tracemalloc.h \
   utils/platform.h utils/PythonIntf.h utils/aluValue.h \
   utils/ErrorReporting.h utils/aluFunctions.h utils/SpecString.h \
   utils/alu.h processing/Config.h
@@ -95,10 +185,11 @@ utils/alu.obj: utils/alu.cc utils/ErrorReporting.h utils/alu.h \
 utils/aluFunctions.obj: utils/aluFunctions.cc utils/ErrorReporting.h \
   utils/aluFunctions.h utils/SpecString.h utils/alu.h utils/platform.h \
   utils/PythonIntf.h utils/aluValue.h utils/TimeUtils.h utils/aluRand.h \
-  utils/aluRegex.h processing/Config.h
+  utils/aluRegex.h processing/Config.h processing/persistent.h
 utils/aluRand.obj: utils/aluRand.cc utils/aluRand.h utils/alu.h \
   utils/platform.h utils/PythonIntf.h utils/aluValue.h \
   utils/ErrorReporting.h
 utils/aluRegex.obj: utils/aluRegex.cc utils/platform.h utils/aluRegex.h \
   utils/aluValue.h utils/lruCache.h utils/ErrorReporting.h
-utils/platform.obj: utils/platform.cc
+utils/platform.obj: utils/platform.cc utils/platform.h \
+  utils/ErrorReporting.h
