--- a/specs/src/Makefile.cached_depends
+++ b/specs/src/Makefile.cached_depends
@@ -1,114 +1,118 @@
-cli/splitter.o: cli/splitter.cc utils/platform.h utils/directives.h \
-  utils/ErrorReporting.h processing/Config.h cli/tokens.h
 cli/tokens.o: cli/tokens.cc utils/platform.h cli/tokens.h \
-  utils/ErrorReporting.h processing/Config.h processing/conversions.h \
-  processing/Reader.h utils/StringQueue.h utils/SpecString.h \
-  utils/TimeUtils.h utils/directives.h processing/ProcessingState.h \
-  processing/Writer.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
-  utils/aluFunctions.h
-processing/Config.o: processing/Config.cc utils/platform.h \
-  utils/TimeUtils.h utils/SpecString.h utils/PythonIntf.h \
-  utils/aluValue.h utils/aluRegex.h processing/Config.h
-processing/ProcessingState.o: processing/ProcessingState.cc \
-  processing/Config.h utils/ErrorReporting.h processing/Reader.h \
-  utils/StringQueue.h utils/SpecString.h utils/platform.h \
-  utils/TimeUtils.h utils/directives.h processing/ProcessingState.h \
-  processing/Writer.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
-  utils/aluFunctions.h
+ utils/ErrorReporting.h processing/Config.h processing/conversions.h \
+ processing/Reader.h utils/StringQueue.h utils/SpecString.h \
+ utils/TimeUtils.h utils/SpecString.h utils/directives.h \
+ processing/ProcessingState.h processing/Writer.h utils/alu.h \
+ utils/PythonIntf.h utils/aluValue.h utils/aluFunctions.h
+cli/splitter.o: cli/splitter.cc utils/platform.h utils/directives.h \
+ utils/ErrorReporting.h processing/Config.h cli/tokens.h
 processing/Reader.o: processing/Reader.cc utils/ErrorReporting.h \
-  processing/Reader.h utils/StringQueue.h utils/SpecString.h \
-  utils/platform.h utils/TimeUtils.h utils/directives.h
+ processing/Reader.h utils/StringQueue.h utils/SpecString.h \
+ utils/platform.h utils/TimeUtils.h utils/SpecString.h utils/directives.h
 processing/StringBuilder.o: processing/StringBuilder.cc \
-  processing/Config.h utils/ErrorReporting.h \
-  processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
-  utils/SpecString.h utils/platform.h utils/TimeUtils.h utils/alu.h \
-  utils/PythonIntf.h utils/aluValue.h utils/aluFunctions.h \
-  processing/StringBuilder.h
+ processing/Config.h utils/ErrorReporting.h processing/ProcessingState.h \
+ processing/Writer.h utils/StringQueue.h utils/SpecString.h \
+ utils/platform.h utils/TimeUtils.h utils/SpecString.h utils/alu.h \
+ utils/PythonIntf.h utils/aluValue.h utils/aluFunctions.h \
+ processing/StringBuilder.h
+processing/Config.o: processing/Config.cc utils/platform.h \
+ utils/TimeUtils.h utils/SpecString.h utils/PythonIntf.h utils/aluValue.h \
+ utils/aluRegex.h processing/Config.h
+processing/ProcessingState.o: processing/ProcessingState.cc \
+ processing/Config.h utils/ErrorReporting.h processing/Reader.h \
+ utils/StringQueue.h utils/SpecString.h utils/platform.h \
+ utils/TimeUtils.h utils/SpecString.h utils/directives.h \
+ processing/ProcessingState.h processing/Writer.h utils/alu.h \
+ utils/PythonIntf.h utils/aluValue.h utils/aluFunctions.h
 processing/Writer.o: processing/Writer.cc utils/ErrorReporting.h \
-  processing/Writer.h utils/StringQueue.h utils/SpecString.h \
-  utils/platform.h utils/TimeUtils.h
+ processing/Writer.h utils/StringQueue.h utils/SpecString.h \
+ utils/platform.h utils/TimeUtils.h utils/SpecString.h
 processing/conversions.o: processing/conversions.cc utils/platform.h \
-  utils/ErrorReporting.h processing/conversions.h utils/SpecString.h \
-  utils/TimeUtils.h
+ utils/ErrorReporting.h processing/conversions.h utils/SpecString.h \
+ utils/TimeUtils.h
 processing/persistent.o: processing/persistent.cc utils/ErrorReporting.h \
-  processing/Config.h processing/persistent.h
-specitems/InputPart.o: specitems/InputPart.cc utils/platform.h \
-  processing/Config.h utils/TimeUtils.h utils/SpecString.h \
-  utils/ErrorReporting.h specitems/item.h cli/tokens.h \
-  processing/conversions.h processing/StringBuilder.h \
-  processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
-  utils/alu.h utils/PythonIntf.h utils/aluValue.h utils/aluFunctions.h
+ processing/Config.h processing/persistent.h
 specitems/dataField.o: specitems/dataField.cc utils/platform.h \
-  utils/ErrorReporting.h processing/Config.h specitems/item.h \
-  cli/tokens.h processing/conversions.h processing/StringBuilder.h \
-  utils/SpecString.h processing/ProcessingState.h processing/Writer.h \
-  utils/StringQueue.h utils/TimeUtils.h utils/alu.h utils/PythonIntf.h \
-  utils/aluValue.h utils/aluFunctions.h
+ utils/ErrorReporting.h processing/Config.h specitems/item.h cli/tokens.h \
+ processing/conversions.h processing/StringBuilder.h utils/SpecString.h \
+ processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
+ utils/SpecString.h utils/TimeUtils.h utils/alu.h utils/PythonIntf.h \
+ utils/aluValue.h utils/aluFunctions.h processing/ProcessingState.h
+specitems/InputPart.o: specitems/InputPart.cc utils/platform.h \
+ processing/Config.h utils/TimeUtils.h utils/SpecString.h \
+ utils/ErrorReporting.h specitems/item.h cli/tokens.h \
+ processing/conversions.h processing/StringBuilder.h \
+ processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
+ utils/SpecString.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
+ utils/aluFunctions.h processing/ProcessingState.h
 specitems/specItems.o: specitems/specItems.cc utils/platform.h \
-  utils/ErrorReporting.h processing/Config.h specitems/specItems.h \
-  specitems/item.h cli/tokens.h processing/conversions.h \
-  processing/StringBuilder.h utils/SpecString.h \
-  processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
-  utils/TimeUtils.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
-  utils/aluFunctions.h processing/Reader.h utils/directives.h
-test/ALUUnitTest.o: test/ALUUnitTest.cc utils/platform.h \
-  utils/ErrorReporting.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
-  utils/aluRegex.h utils/TimeUtils.h utils/SpecString.h \
-  processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
-  utils/aluFunctions.h processing/persistent.h
+ utils/ErrorReporting.h processing/Config.h specitems/specItems.h \
+ specitems/item.h cli/tokens.h processing/conversions.h \
+ processing/StringBuilder.h utils/SpecString.h \
+ processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
+ utils/SpecString.h utils/TimeUtils.h utils/alu.h utils/PythonIntf.h \
+ utils/aluValue.h utils/aluFunctions.h processing/ProcessingState.h \
+ processing/Reader.h utils/directives.h
 test/ProcessingTest.o: test/ProcessingTest.cc utils/platform.h \
-  cli/tokens.h utils/ErrorReporting.h specitems/specItems.h \
-  specitems/item.h processing/conversions.h processing/StringBuilder.h \
-  utils/SpecString.h processing/ProcessingState.h processing/Writer.h \
-  utils/StringQueue.h utils/TimeUtils.h utils/alu.h utils/PythonIntf.h \
-  utils/aluValue.h utils/aluFunctions.h processing/Reader.h \
-  utils/directives.h processing/Config.h
-test/TokenTest.o: test/TokenTest.cc cli/tokens.h utils/ErrorReporting.h
-test/cacheTest.o: test/cacheTest.cc utils/lruCache.h \
-  utils/ErrorReporting.h
-test/itemTest.o: test/itemTest.cc utils/platform.h cli/tokens.h \
-  utils/ErrorReporting.h specitems/specItems.h specitems/item.h \
-  processing/conversions.h processing/StringBuilder.h utils/SpecString.h \
-  processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
-  utils/TimeUtils.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
-  utils/aluFunctions.h processing/Reader.h utils/directives.h
-test/readWriteTest.o: test/readWriteTest.cc utils/ErrorReporting.h \
-  processing/Reader.h utils/StringQueue.h utils/SpecString.h \
-  utils/platform.h utils/TimeUtils.h utils/directives.h \
-  processing/Writer.h processing/StringBuilder.h \
-  processing/ProcessingState.h utils/alu.h utils/PythonIntf.h \
-  utils/aluValue.h utils/aluFunctions.h
+ cli/tokens.h utils/ErrorReporting.h specitems/specItems.h \
+ specitems/item.h processing/conversions.h processing/StringBuilder.h \
+ utils/SpecString.h processing/ProcessingState.h processing/Writer.h \
+ utils/StringQueue.h utils/SpecString.h utils/TimeUtils.h utils/alu.h \
+ utils/PythonIntf.h utils/aluValue.h utils/aluFunctions.h \
+ processing/ProcessingState.h processing/Reader.h utils/directives.h \
+ processing/Config.h
 test/specs.o: test/specs.cc utils/platform.h cli/tokens.h \
-  utils/ErrorReporting.h processing/Config.h processing/persistent.h \
-  specitems/specItems.h specitems/item.h processing/conversions.h \
-  processing/StringBuilder.h utils/SpecString.h \
-  processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
-  utils/TimeUtils.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
-  utils/aluFunctions.h processing/Reader.h utils/directives.h \
-  utils/aluRegex.h
+ utils/ErrorReporting.h processing/Config.h processing/persistent.h \
+ specitems/specItems.h specitems/item.h processing/conversions.h \
+ processing/StringBuilder.h utils/SpecString.h \
+ processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
+ utils/SpecString.h utils/TimeUtils.h utils/alu.h utils/PythonIntf.h \
+ utils/aluValue.h utils/aluFunctions.h processing/ProcessingState.h \
+ processing/Reader.h utils/directives.h utils/aluRegex.h
+test/cacheTest.o: test/cacheTest.cc utils/lruCache.h \
+ utils/ErrorReporting.h
+test/TokenTest.o: test/TokenTest.cc cli/tokens.h utils/ErrorReporting.h
+test/ALUUnitTest.o: test/ALUUnitTest.cc utils/platform.h \
+ utils/ErrorReporting.h utils/alu.h utils/PythonIntf.h utils/aluValue.h \
+ utils/aluRegex.h utils/TimeUtils.h utils/SpecString.h \
+ processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
+ utils/SpecString.h utils/aluFunctions.h processing/persistent.h
+test/itemTest.o: test/itemTest.cc utils/platform.h cli/tokens.h \
+ utils/ErrorReporting.h specitems/specItems.h specitems/item.h \
+ processing/conversions.h processing/StringBuilder.h utils/SpecString.h \
+ processing/ProcessingState.h processing/Writer.h utils/StringQueue.h \
+ utils/SpecString.h utils/TimeUtils.h utils/alu.h utils/PythonIntf.h \
+ utils/aluValue.h utils/aluFunctions.h processing/ProcessingState.h \
+ processing/Reader.h utils/directives.h
+test/readWriteTest.o: test/readWriteTest.cc utils/ErrorReporting.h \
+ processing/Reader.h utils/StringQueue.h utils/SpecString.h \
+ utils/platform.h utils/TimeUtils.h utils/SpecString.h utils/directives.h \
+ processing/Writer.h processing/StringBuilder.h \
+ processing/ProcessingState.h utils/alu.h utils/PythonIntf.h \
+ utils/aluValue.h utils/aluFunctions.h
 test/timeTest.o: test/timeTest.cc utils/TimeUtils.h utils/SpecString.h
-utils/ErrorReporting.o: utils/ErrorReporting.cc utils/ErrorReporting.h
-utils/PythonIntf.o: utils/PythonIntf.cc utils/platform.h \
-  utils/PythonIntf.h utils/aluValue.h utils/ErrorReporting.h \
-  utils/aluFunctions.h utils/SpecString.h utils/alu.h \
-  processing/Config.h
-utils/SpecString.o: utils/SpecString.cc processing/Config.h \
-  utils/ErrorReporting.h utils/SpecString.h
-utils/TimeUtils.o: utils/TimeUtils.cc utils/ErrorReporting.h \
-  utils/platform.h utils/TimeUtils.h utils/SpecString.h
-utils/alu.o: utils/alu.cc utils/ErrorReporting.h utils/alu.h \
-  utils/platform.h utils/PythonIntf.h utils/aluValue.h \
-  utils/aluFunctions.h utils/SpecString.h processing/Config.h
-utils/aluFunctions.o: utils/aluFunctions.cc utils/ErrorReporting.h \
-  utils/aluFunctions.h utils/SpecString.h utils/alu.h utils/platform.h \
-  utils/PythonIntf.h utils/aluValue.h utils/TimeUtils.h utils/aluRand.h \
-  utils/aluRegex.h processing/Config.h processing/persistent.h
-utils/aluRand.o: utils/aluRand.cc utils/aluRand.h utils/alu.h \
-  utils/platform.h utils/PythonIntf.h utils/aluValue.h \
-  utils/ErrorReporting.h
-utils/aluRegex.o: utils/aluRegex.cc utils/platform.h utils/aluRegex.h \
-  utils/aluValue.h utils/lruCache.h utils/ErrorReporting.h
-utils/directives.o: utils/directives.cc utils/ErrorReporting.h \
-  processing/Config.h utils/directives.h
 utils/platform.o: utils/platform.cc utils/platform.h \
-  utils/ErrorReporting.h
+ utils/ErrorReporting.h
+utils/directives.o: utils/directives.cc utils/ErrorReporting.h \
+ processing/Config.h utils/directives.h
+utils/aluRand.o: utils/aluRand.cc utils/aluRand.h utils/alu.h \
+ utils/platform.h utils/PythonIntf.h utils/aluValue.h utils/platform.h \
+ utils/ErrorReporting.h
+utils/PythonIntf.o: utils/PythonIntf.cc utils/platform.h \
+ utils/PythonIntf.h utils/aluValue.h utils/ErrorReporting.h \
+ utils/aluFunctions.h utils/SpecString.h utils/alu.h utils/PythonIntf.h \
+ processing/Config.h
+utils/aluFunctions.o: utils/aluFunctions.cc utils/ErrorReporting.h \
+ utils/aluFunctions.h utils/SpecString.h utils/alu.h utils/platform.h \
+ utils/PythonIntf.h utils/aluValue.h utils/TimeUtils.h utils/aluRand.h \
+ utils/aluRegex.h processing/Config.h processing/persistent.h
+utils/ErrorReporting.o: utils/ErrorReporting.cc utils/ErrorReporting.h
+utils/alu.o: utils/alu.cc utils/ErrorReporting.h utils/alu.h \
+ utils/platform.h utils/PythonIntf.h utils/aluValue.h \
+ utils/aluFunctions.h utils/SpecString.h utils/alu.h processing/Config.h
+utils/aluRegex.o: utils/aluRegex.cc utils/platform.h utils/aluRegex.h \
+ utils/aluValue.h utils/lruCache.h utils/ErrorReporting.h
+utils/SpecString.o: utils/SpecString.cc processing/Config.h \
+ utils/ErrorReporting.h utils/SpecString.h
+utils/TimeUtils.o: utils/TimeUtils.cc utils/ErrorReporting.h \
+ utils/platform.h utils/TimeUtils.h utils/SpecString.h
