--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,11 +13,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: cd
-      run: cd specs/src
     - name: configure
-      run: python setup.py
+      run: cd specs/src ; python setup.py
     - name: make
-      run: make all
+      run: cd specs/src ; make all
     - name: make check
-      run: make run_tests
+      run: cd specs/src ; make run_tests
