--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ v0.9-dev dev-0.9.1 ]
+    branches: [ dev, dev-0.9.1 ]
   pull_request:
-    branches: [ v0.9-dev dev-0.9.1 ]
+    branches: [ dev, dev-0.9.1 ]
 
 jobs:
   build:
