--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ dev, dev-0.9.1-beta, dev-cpp-17 ]
+    branches: [ dev, stable, dev-0.9.2, dev-0.9.3, dev-0.9.4, dev-0.9.5, dev-0.9.9, dev-1.0.0]
   pull_request:
-    branches: [ dev, dev-0.9.1-beta, dev-cpp-17 ]
+    branches: [ dev, stable, dev-0.9.2, dev-0.9.3, dev-0.9.4, dev-0.9.5, dev-0.9.9, dev-1.0.0]
 
 jobs:
   build:
